--- a/xss/production/android/SimpleTest/res/values/strings.xml
+++ b/xss/production/android/SimpleTest/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Simple Sample Android Application</string>
-					<string name="res0">Enter firstname: </string>
-					<string name="res1">Enter lastname: </string>
-					<string name="res2">Resolve FullName</string>
-					<string name="res3">Your fullname is </string>
+					<string name="res0">Enter forename: </string>
+					<string name="res1">Enter surname: </string>
+					<string name="res2">Resolve Full Name</string>
+					<string name="res3">Your full name is </string>
 				</resources>
